# CustomQtPlugin

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Plugins/DateEcho/: CMakeLists.txt  DateEcho.cpp  DateEcho.h
Plugins/Interface/: IEchoInterface.h
Plugins/MessageEcho/: CMakeLists.txt  MessageEcho.cpp  MessageEcho.h
